[package]
authors = ["Sean Leffler <sean@errno.com>"]
name = "qp-trie"
version = "0.7.2"

description = "An idiomatic and fast QP-trie implementation in pure Rust, written with an emphasis on safety."

documentation = "https://docs.rs/qp-trie"
homepage = "https://github.com/sdleffler/qp-trie-rs"
repository = "https://github.com/sdleffler/qp-trie-rs"

readme = "README.md"

keywords = ["trie", "radix", "map", "key", "value"]

categories = ["data-structures", "text-processing", "rust-patterns"]

license = "MPL-2.0"

[badges]
travis-ci = { repository = "sdleffler/qp-trie-rs", branch = "master" }

[dependencies]
new_debug_unreachable = "1.0.1"
serde = { version = "1.0.11", optional = true, features = ["derive"] }
unreachable = "1.0.0"

[dev-dependencies]
bincode = "1.0"
fnv = "1.0.5"
qptrie = "0.2.2"
quickcheck = "0.7"
rand = "0.5"
serde_json = "1.0.3"
